--- a/ngapp/src/app/student/story-drawer/story-drawer.component.scss
+++ b/ngapp/src/app/student/story-drawer/story-drawer.component.scss
@@ -1,6 +1,25 @@
+.body {
+    display: flex;
+    width: 100%;
+    height: 98%;
+    flex-direction: column;
+}
+
 .storyList {
-    height: 90%;
-    overflow-y:scroll;
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+.myStories {
+    color: var(--dark-text);
+    font-size: 16pt;
+    padding-bottom: 10px;
+    text-align: left;
+    font-weight: bolder;
+}
+
+.searchBox {
+    min-width: 300px;
 }
 
 .contentSection {
@@ -32,11 +51,12 @@
 }
 
 .newStoryButton {
-    float: right;
+    margin-left: auto;
 }
 
 .mat-fab.mat-accent, .mat-mini-fab.mat-accent {
     background-color: var(--scealai-green);
+    box-shadow: none;
 }
 
 .clickedresultCard {
