--- a/ngapp/src/app/student/story-drawer/story-drawer.component.html
+++ b/ngapp/src/app/student/story-drawer/story-drawer.component.html
@@ -15,14 +15,31 @@
   </div>
   <!-- list of stories -->
   <div class="storyList">
-    <div *ngFor="let story of stories | appFilter : searchText" (click)="setStory(story)" >
+    <div *ngFor="let story of stories | appFilter : searchText; let i = index" (click)="setStory(story)" >
+      <!-- story entry-->
       <div class="contentSection" [attr.id]="story._id">
-        <div class="contentsTitle">
+        <!-- story title-->
+        <div class="contentsTitle" [attr.id]="i" (blur)="saveStoryTitle(i, story)">
           {{ story?.title }}
         </div>
+        <!-- date and menu icon-->
         <div class="contentsDate">
           {{ story.lastUpdated | date : "d/M/yy" }}
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="deleteStory(story._id)">
+              <mat-icon>delete</mat-icon>
+              <span>{{ts.l.delete}}</span>
+            </button>
+            <button mat-menu-item (click)="updateStoryTitle(i)">
+              <mat-icon>create</mat-icon>
+              <span>Rename</span>
+            </button>
+          </mat-menu>
         </div>
+
       </div>
       <hr />
     </div>
