--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -174,6 +174,7 @@
       [quillHighlighter]="quillHighlighter"
       [grammarLoaded]="grammarLoaded"
       [grammarErrorsTypeDict]="grammarErrorsTypeDict"
+      [grammarErrors]="grammarErrors"
       [checkBoxes]="checkBoxes"
       (closeGrammarEmitter)="toggleRightDrawer('grammar')"
     ></app-grammar-error-drawer>
