--- a/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -1,168 +1,115 @@
   <!-- nav bar at the top of the page -->
   <div class="nav">
     <!-- nav -> dropdown when screen size gets small-->
-    <input type="checkbox" id="nav-check" [checked]="checkVal" />
+    <input type="checkbox" id="nav-check" [checked]="smallMenuOpen" />
     <!-- logo -->
     <div class="nav-header">
-      <!-- redirect to the landing component for login / register -->
       <div class="nav-title">
-        <a routerLink="/landing">
           <img src="assets/img/logo-navbar.png" class="logo" />
-        </a>
       </div>
     </div>
     <!-- Three-bar menu button when screen is small -->
-    <div class="nav-btn" (click)="changeCheck()">
-      <label *ngIf="!checkVal">
+    <div class="nav-btn" (click)="toggleSmallMenu()">
+      <label *ngIf="!smallMenuOpen">
         <span></span>
         <span></span>
         <span></span>
       </label>
-      <div *ngIf="checkVal" class="closeMenu">
+      <div *ngIf="smallMenuOpen" class="closeMenu">
         <div>
           <i class="fas fa-times closeMenuTimes"></i>
         </div>
       </div>
       <div
-        *ngIf="!checkVal && notifications.length > 0"
+        *ngIf="!smallMenuOpen && notifications.length > 0"
         class="notificationBtn menuNotificationBtn"
-        (click)="changeCheck()"
+        (click)="toggleSmallMenu()"
       ></div>
     </div>
     <!-- links on the nav bar -->
     <div class="nav-links">
-      <a *ngIf="auth.isLoggedIn() && auth.getUserDetails().role === 'STUDENT'" routerLink="/student" class="navBtn" (click)="changeCheck()" >
-        {{ ts.l.my_stories }}
-      </a>
-      <a *ngIf="auth.isLoggedIn() && auth.getUserDetails().role === 'TEACHER'" routerLink="/teacher" class="navBtn" (click)="changeCheck()" >
-        {{ ts.l.my_classrooms }}
-      </a>
-      <a *ngIf="auth.isLoggedIn() && auth.getUserDetails().role === 'ADMIN'" routerLink="/admin" class="navBtn" (click)="changeCheck()" >
-        {{ ts.l.admin_dashboard }}
-      </a>
-      <!-- about menu -->
-      <div ngbDropdown class="d-inline-block" #myDrop1="ngbDropdown" placement="bottom" >
-        <button class="btn navbarBtn" id="dropdownBasic1" ngbDropdownToggle onclick="this.blur();">
-          {{ ts.l.about }}
-        </button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <a routerLink="/about" ngbDropdownItem (click)="changeCheck()">
-            An Scéalaí
-          </a>
-          <a routerLink="/technology" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.technology }}
-          </a>
-          <a routerLink="/user-guides" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.user_guide }}
-          </a>
-          <a routerLink="/team" ngbDropdownItem (click)="changeCheck()">
-            {{ ts.l.the_team }}
-          </a>
-          <a routerLink="/sponsors" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.sponsors }}
-          </a>
-          <a routerLink="/report-an-issue" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.report_an_issue }}
-          </a>
-        </div>
-      </div>
-      <!-- technology menu -->
-      <!-- <div ngbDropdown class="d-inline-block" #myDrop2="ngbDropdown">
-        <button class="btn navbarBtn" id="dropdownBasic1" ngbDropdownToggle onclick="this.blur();" >
-          {{ ts.l.technology }}
-        </button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button routerLink="/technology" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.technology }}
-          </button>
-          <button routerLink="/about" ngbDropdownItem (click)="changeCheck()">{{ts.l.other_CALL_projects}}</button>
-        </div>
-      </div> -->
-      <!-- LARA menu -->
-      <div ngbDropdown class="d-inline-block" #myDrop3="ngbDropdown" placement="bottom" >
-        <button class="btn navbarBtn" ngbDropdownToggle onclick="this.blur();">
-          LARA
-        </button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <a routerLink="/about-lara" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.what_is_LARA }}
-          </a>
-          <a routerLink="/resources" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.irish_stories }}
-          </a>
-        </div>
-      </div>
-      <!--Taidhgín-->
-      <!-- <div ngbDropdown class="d-inline-block" #myDrop3="ngbDropdown" placement="bottom" >
-        <button class="btn navbarBtn" ngbDropdownToggle onclick="this.blur();">
-          Taidhgín
-        </button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button routerLink="/taidhgin" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.taidhgin_title }}
-          </button>
-          <button routerLink="/create-quiz" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.create_quiz_title }}
-          </button>
-          <button routerLink="/about-taidhgin" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.what_is_taidhgin_title }}
-          </button>
-        </div>
-      </div> -->
-      <!--Prompts-->
-      <div *ngIf="auth.isLoggedIn()" ngbDropdown class="d-inline-block" #myDrop3="ngbDropdown" placement="bottom">
-        <button matBadge="Beta" matBadgeSize="small" matBadgePosition="before" matBadgeColor="accent" class="btn navbarBtn" ngbDropdownToggle onclick="this.blur();" >
-          Cén Scéal?
-        </button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <a routerLink="/prompts/general" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.general_prompts }}
-          </a>
-          <a routerLink="/prompts/proverb" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.proverb_prompts}}
-          </a>
-          <a routerLink="/prompts/exam" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.exam_prompts }}
-          </a>
-          <a routerLink="/prompts/lara" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.lara_prompts }}
-          </a>
-          <a routerLink="/prompts/combination" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.combination_generator }}
-          </a>
-          <a routerLink="/prompts/pos" ngbDropdownItem (click)="changeCheck()" >
-            {{ ts.l.part_of_speech_generator }}
-          </a>
-        </div>
-      </div>
-      <!--Dictgloss-->
-      <div *ngIf="auth.isLoggedIn()" class="d-inline-block">
-        <a class="btn navbarBtn" style="margin-bottom:3px" routerLink="/dictogloss" onclick="this.blur();" (click)="changeCheck()" >
-          {{ts.l.dictogloss}}
-        </a>
-      </div>
 
-      <!-- An Bat Mírialta -->
-      <div class="d-inline-block">
-        <a href="https://bat-mirialta.detail-design-develop.com/applications/bat-mirialta/" target="_blank" rel="noopener noreferrer" class="navBtn">An Bat Mírialta</a >
-      </div>
-            
-      <!--ABAIR-->
-      <div class="d-inline-block">
-        <a href="https://www.abair.tcd.ie/" target="_blank" rel="noopener noreferrer" class="navBtn">ABAIR</a >
-      </div>
+      <!-- Home page button-->
+      <a *ngIf="auth.isLoggedIn()" routerLink="" class="navBtn" (click)="toggleSmallMenu(); goToHomePage()" > Home </a>
+
+      <!-- More Apps -->
+      <button #menuTrigger="matMenuTrigger" [matMenuTriggerFor]="moreApps" class="dropdown-toggle dropdownMenu">More apps</button>
+      <!-- First level: stats, messages, lara, cen sceal, dictogloss, An Bat Mírialta-->
+      <mat-menu #moreApps="matMenu">
+        <a *ngIf="auth.isLoggedIn()" mat-menu-item class="dropdownMenuItem" target="_blank" rel="noopener noreferrer" (click)="goToStats(); toggleSmallMenu()">Stats Dashboard</a>
+        <a *ngIf="auth.isLoggedIn()" mat-menu-item class="dropdownMenuItem" target="_blank" rel="noopener noreferrer" (click)="goToMessages(); toggleSmallMenu()">Messages</a>
+        <button mat-menu-item [matMenuTriggerFor]="LARA">LARA</button>
+        <button *ngIf="auth.isLoggedIn()" mat-menu-item [matMenuTriggerFor]="cenSceal">Cén Scéal</button>
+        <a *ngIf="auth.isLoggedIn()" mat-menu-item class="dropdownMenuItem" routerLink="/dictogloss" rel="noopener noreferrer" (click)="toggleSmallMenu()">Dictogloss</a>
+        <a mat-menu-item class="dropdownMenuItem" href="https://bat-mirialta.detail-design-develop.com/applications/bat-mirialta/" target="_blank" rel="noopener noreferrer" (click)="toggleSmallMenu()">An Bat Mírialta</a>
+      </mat-menu>
+      
+      <!-- LARA dropdown menu-->
+      <mat-menu #LARA="matMenu">
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/about-lara" > {{ ts.l.what_is_LARA }}</a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/resources" >{{ ts.l.irish_stories }}</a>
+      </mat-menu>
+      
+      <!-- Cen Scéal dropdown menu-->
+      <mat-menu #cenSceal="matMenu">
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/general" (click)="toggleSmallMenu()" >
+          {{ ts.l.general_prompts }}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/proverb" (click)="toggleSmallMenu()" >
+          {{ ts.l.proverb_prompts}}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/exam" (click)="toggleSmallMenu()" >
+          {{ ts.l.exam_prompts }}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/lara" (click)="toggleSmallMenu()" >
+          {{ ts.l.lara_prompts }}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/combination" (click)="toggleSmallMenu()" >
+          {{ ts.l.combination_generator }}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/pos" (click)="toggleSmallMenu()" >
+          {{ ts.l.part_of_speech_generator }}
+        </a>
+      </mat-menu>
+
+      <!-- About menu -->
+      <button #menuTrigger="matMenuTrigger" [matMenuTriggerFor]="about" class="dropdown-toggle dropdownMenu">About</button>
+      <mat-menu #about="matMenu">
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/about" (click)="toggleSmallMenu()" >
+          An Scéalaí
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/technology" (click)="toggleSmallMenu()" >
+          {{ ts.l.technology }}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/user-guides" (click)="toggleSmallMenu()" >
+          {{ ts.l.user_guide }}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/team" (click)="toggleSmallMenu()" >
+          {{ ts.l.the_team }}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/sponsors" (click)="toggleSmallMenu()" >
+          {{ ts.l.sponsors }}
+        </a>
+        <a mat-menu-item class="dropdownMenuItem" routerLink="/report-an-issue" (click)="toggleSmallMenu()" >
+          {{ ts.l.report_an_issue }}
+        </a>
+      </mat-menu>
+
+      <!--ABAIR link-->
+      <a href="https://www.abair.tcd.ie/" target="_blank" rel="noopener noreferrer" class="navBtn">ABAIR</a >
+
       <!-- Change language dropdown and login button-->
       <div class="navBtn rightNavBtn">
         <button class="btn navbarBtn" (click)="this.toggleLanguage()" >
           {{ ts.l.other_language }}
         </button>
         <!-- sign in button -->
-        <a *ngIf="!auth.isLoggedIn()" routerLink="/login" class="btn navbarBtn" (click)="changeCheck()" onclick="this.blur();" >
+        <a *ngIf="!auth.isLoggedIn()" routerLink="/login" class="btn navbarBtn" (click)="toggleSmallMenu()" onclick="this.blur();" >
           {{ ts.l.sign_in }}
         </a>
         <div *ngIf="auth.isLoggedIn()" class="profileBtnContainer">
           <!-- username button -->
-          <button routerLink="/profile" (click)="changeCheck()" class="btn navbarBtn" >
+          <button routerLink="/profile" (click)="toggleSmallMenu()" class="btn navbarBtn" >
             {{ auth.getUserDetails()?.username }}
             <i class="fas fa-user"></i>
           </button>
