pass backend tests and add 'Rename' translation

--- a/ngapp/src/app/student/story-drawer/story-drawer.component.html
+++ b/ngapp/src/app/student/story-drawer/story-drawer.component.html
@@ -35,7 +35,7 @@
             </button>
             <button mat-menu-item (click)="updateStoryTitle(i)">
               <mat-icon>create</mat-icon>
-              <span>Rename</span>
+              <span>{{ ts.l.rename }}</span>
             </button>
           </mat-menu>
         </div>
