--- a/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -20,7 +20,8 @@
         <i class="fas fa-times closeMenuTimes"></i>
       </div>
     </div>
-    <div *ngIf="!smallMenuOpen && notifications.length > 0" class="notificationBtn menuNotificationBtn" (click)="toggleSmallMenu()" ></div>
+    <!-- small red dot on small menu if notifications-->
+    <div *ngIf="!smallMenuOpen && totalNumOfMessages > 0" class="notificationBtn menuNotificationBtn" (click)="toggleSmallMenu()" ></div>
   </div>
   <!-- links on the nav bar -->
   <div class="nav-links">
@@ -82,7 +83,7 @@
 
       <!-- sign in button -->
       <a *ngIf="!auth.isLoggedIn()" routerLink="/login" class="btn userBtn" (click)="toggleSmallMenu()" onclick="this.blur();" > {{ ts.l.sign_in }} </a>
-      <div *ngIf="auth.isLoggedIn()" class="profileBtnContainer">
+      <div *ngIf="auth.isLoggedIn()">
         <!-- username button -->
         <button routerLink="/profile" (click)="toggleSmallMenu()" class="btn userBtn" >
           {{ auth.getUserDetails()?.username }}
