--- a/ngapp/src/app/student/story-drawer/story-drawer.component.html
+++ b/ngapp/src/app/student/story-drawer/story-drawer.component.html
@@ -25,7 +25,7 @@
         <!-- date and menu icon-->
         <div class="contentsDate">
           {{ story.lastUpdated | date : "d/M/yy" }}
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Options to delete or rename your story">
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
