--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -128,6 +128,7 @@
       #storyDrawer
       (storyEmitter)="setCurrentStory($event)"
       (hasFeedback)="hasFeedback = $event"
+      (titleUpdated)="updatedTitle = $event"
     ></app-story-drawer>
   </mat-drawer>
 
