--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -123,12 +123,13 @@
 <!-- BODY CONTAINER-->
 <mat-drawer-container class="bodyContainer" autosize>
   <!-- STORY LIST DRAWER-->
-  <mat-drawer #storyDrawer class="storyListDrawer" mode="side" opened="true">
+  <mat-drawer #storyDrawer class="storyListDrawer" mode="side" [opened]="!story && storiesLoaded">
     <app-story-drawer
       #storyDrawer
       (storyEmitter)="setCurrentStory($event)"
       (hasFeedback)="hasFeedback = $event"
       (titleUpdated)="updatedTitle = $event"
+      (storiesLoaded)="storiesLoaded = $event"
     ></app-story-drawer>
   </mat-drawer>
 
@@ -151,7 +152,10 @@
 
     <!-- NO STORIES MESSAGE-->
     <ng-template #newStoryMessage>
-      <div class="newStoryMessage">
+      <div *ngIf="!storiesLoaded">
+        <grid-spinner></grid-spinner>
+      </div>
+      <div *ngIf="storiesLoaded" class="newStoryMessage">
         Click on the '+' button to create your first story!
       </div>
     </ng-template>
