--- a/ngapp/src/app/student/synth-item/synth-item.component.html
+++ b/ngapp/src/app/student/synth-item/synth-item.component.html
@@ -5,6 +5,7 @@
     </span>
   </span>
   <span
+    *ngIf=synthItem
     (click)=play()
     class="
       flex
@@ -13,7 +14,7 @@
       right
       "
     style="display: flex;">
-      <span style="display: flex;">
+      <span *ngIf="synthItem.audioUrl; else loading" style="display: flex;">
         <div style="width: 1rem; height: 1rem;"></div>
         <span>&ensp;{{synthItem.text}}</span>
         <audio id="synthAudio" #audioElement>
