--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -123,7 +123,7 @@
 <!-- BODY CONTAINER-->
 <mat-drawer-container class="bodyContainer" autosize>
   <!-- STORY LIST DRAWER-->
-  <mat-drawer #storyDrawer class="storyListDrawer" mode="side" [opened]="!story && storiesLoaded">
+  <mat-drawer #storyDrawer class="storyListDrawer" mode="side">
     <app-story-drawer
       #storyDrawer
       (storyEmitter)="setCurrentStory($event)"
@@ -135,7 +135,7 @@
 
   <!-- STORY WRITING CONTAINER-->
   <div class="storyContainer">
-    <div class="ql-container" #quillHeightSpan [ngStyle]="quillEditorStyle" *ngIf="story; else newStoryMessage" >
+    <div class="ql-container" #quillHeightSpan [ngStyle]="quillEditorStyle" *ngIf="storiesLoaded && story; else newStoryMessage" >
       <!-- STORY DRAWER BUTTON-->
       <span class="menuButton material-symbols-outlined" (click)="storyDrawer.toggle()">menu</span>
       <!-- QUILL EDITOR AND TOOLBAR-->
@@ -152,10 +152,7 @@
 
     <!-- NO STORIES MESSAGE-->
     <ng-template #newStoryMessage>
-      <div *ngIf="!storiesLoaded">
-        <grid-spinner></grid-spinner>
-      </div>
-      <div *ngIf="storiesLoaded" class="newStoryMessage">
+      <div *ngIf="storiesLoaded && stories.length == 0" class="newStoryMessage">
         Click on the '+' button to create your first story!
       </div>
     </ng-template>
