--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -123,13 +123,14 @@
 <!-- BODY CONTAINER-->
 <mat-drawer-container class="bodyContainer" autosize>
   <!-- STORY LIST DRAWER-->
-  <mat-drawer #storyDrawer class="storyListDrawer" mode="side">
+  <mat-drawer #storyDrawer class="storyListDrawer" mode="side" [opened]="storiesLoaded && (!story || isFirstStory)">
     <app-story-drawer
       #storyDrawer
       (storyEmitter)="setCurrentStory($event)"
       (hasFeedback)="hasFeedback = $event"
       (titleUpdated)="updatedTitle = $event"
       (storiesLoaded)="storiesLoaded = $event"
+      (isFirstStory)="isFirstStory = $event"
     ></app-story-drawer>
   </mat-drawer>
 
@@ -152,7 +153,7 @@
 
     <!-- NO STORIES MESSAGE-->
     <ng-template #newStoryMessage>
-      <div *ngIf="storiesLoaded && stories.length == 0" class="newStoryMessage">
+      <div *ngIf="storiesLoaded" class="newStoryMessage">
         Click on the '+' button to create your first story!
       </div>
     </ng-template>
